# project-euler-solutions

haskell/: CHANGELOG.md  LICENSE  euler-haskell.cabal
haskell/app/: p001.hs  p002.hs  p003.hs  p004.hs  p005.hs  p006.hs  p007.hs  p008.hs  p009.hs  p010.hs
julia/: Manifest.toml  Project.toml  p010.jl  p011.jl  p012.jl  p015.jl  p017.jl  p018.jl  p019.jl  p021.jl  p022.jl  p023.jl  p024.jl  p026.jl  p027.jl  p028.jl  p029.jl  p030.jl  p031.jl  p034.jl  p035.jl  p039.jl
